22.12.2010:
        - Capitalizations in the menus thanks to Geoff King (gsking1->gmail. com)
        - Added some comments in app.cpp that I've been willing to include for a while. (Orcan)
        - Added a line to CMakeLists to install the splash image. Commented out for now. (Orcan)
        - added new-user help dialog for Input button on midi track-info (rj)
21.12.2010:
        - Moved all the config files "~/.musePrj, ~/.MusE, ~/.deicsonze.dco" into ~/.config/MusE/
          and renamed them as "projects, MusE.cfg, deicsonze.dco", respectively. (Orcan)
        - User instruments path is made user configurable with default location in
          ~/.config/MusE/instruments
        - In simpledrums2, set the 64bit ladpsa plugin paths. (Orcan)
        - Fix: gensetbase was opening in the last tab instead of the first. (Orcan)
        - Eliminated environment variables usage (MUSE, MUSEHOME, MUSEINSTRUMENTS). (Orcan)
20.12.2010:
        - Fixed arranger grid h-line drawing, track, and part drawing alignment, border issues. (Tim)
        - To open help pages, use the default browser of the system via QDeskopServices. Removed
          the configuration option to select the browser. (Orcan)
        - Added some groupboxes and layouts to Global Settings to make it look more uniform. (Orcan)
        - Don't pack the binary and subversion directories when doing "make package_source". (Orcan)
        - Updated the Russian translation again thanks to Alex, alex54m -> mail.ru
        - Fix a typo in awl/CMakeLists.txt that disabled the translations for awl. (Orcan)
        - Updated all the .ts files with the latest strings. Made sure that share/locale/CMakeLists
          is scanned last so that all the translations are collected before coming to that. (Orcan)
        - Fix: cliplist target should depend on widgets target. (Orcan)
19.12.2010:
        - Fixed not saving part colours and part canvas background appearance settings. (Tim)