@@ -379,7 +379,7 @@ Arranger::Arranger(QMainWindow* parent, const char* name)
       connect(hscroll, SIGNAL(scrollChanged(int)), canvas, SLOT(setXPos(int)));
       connect(hscroll, SIGNAL(scaleChanged(int)),  canvas, SLOT(setXMag(int)));
       connect(vscroll, SIGNAL(valueChanged(int)), list,   SLOT(setYPos(int)));
-      connect(hscroll, SIGNAL(scrollChanged(int)), time,   SLOT(setXPos(int)));
+      connect(hscroll, SIGNAL(scrollChanged(int)), time,   SLOT(setXPos(int)));   //
       connect(hscroll, SIGNAL(scaleChanged(int)),  time,   SLOT(setXMag(int)));
       connect(canvas,  SIGNAL(timeChanged(unsigned)),   SLOT(setTime(unsigned)));
       connect(canvas,  SIGNAL(verticalScroll(unsigned)),SLOT(verticalScrollSetYpos(unsigned)));
